# TuxGame

./: CMakeLists.txt  main.cpp
TestGame/: Character.cpp  Character.h  main.cpp
TuxEngine/Behavior/: Component.cpp  Component.h  GameObject.cpp  GameObject.h  IComponent.h  IGameObject.h
TuxEngine/Core/: Engine.cpp  Engine.h  Input.cpp  Input.h
TuxEngine/Graphics/: Renderer.cpp  Renderer.h  SpriteRenderer.cpp  SpriteRenderer.h
cmake_modules/: FindSFML.cmake
